# fast-admin

./: .env.example  README.md  pyproject.toml
core/: __init__.py  admin.py  auth.py  auth_routes.py  forms.py  models.py  permissions.py  routes.py  settings.py  static.py
core/static/css/: admin.css  tailwind.min.css
core/static/js/: admin.js
core/static/js/modules/: bulk-actions.js  pagination.js  table-manager.js
core/templates/: base.html
core/templates/admin/: detail.html  form.html  index.html  list.html
core/templates/auth/: login.html
core/templates/components/: breadcrumbs.html  messages.html  navbar.html  sidebar.html
migrations/: env.py
migrations/versions/: b27b909758ae_initial_auth_tables.py
