[project]
name = "fast-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.42",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "alembic>=1.16.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "psycopg[binary]>=3.1.0",
    "uvicorn>=0.35.0",
    "argon2-cffi>=23.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1", # for testing FastAPI
]
